Uncommenting Objective-C source code

--- a/2012-09-03-nslocale.md
+++ b/2012-09-03-nslocale.md
@@ -91,11 +91,11 @@ So if you were building a component that added quotations around arbitrary text,
 
 Another impressive, albeit mostly-useless method is `-displayNameForKey:value:`, which can return the display name of a locale identifier (`NSLocaleIdentifier`):
 
-<!-- ~~~{objective-c}
+~~~{objective-c}
 NSLocale *frLocale = [[NSLocale alloc] initWithLocaleIdentifier:@"fr_FR"];
 NSLog(@"fr_FR: %@", [frLocale displayNameForKey:NSLocaleIdentifier value:@"fr_FR"]);
 NSLog(@"en_US: %@", [frLocale displayNameForKey:NSLocaleIdentifier value:@"en_US"]);
-~~~ -->
+~~~
 
 ~~~{swift}
 let locale = NSLocale(localeIdentifier: "fr_FR")
@@ -117,10 +117,10 @@ One final method worth mentioning is `NSLocale +preferredLanguages`, which retur
 
 An app that communicates with a web server can use these values to define the `Accept-Language` HTTP header, such that the server has the option to return localized resources:
 
-<!-- ~~~{objective-c}
+~~~{objective-c}
 NSMutableURLRequest *request = ...;
 [request setValue:[NSString stringWithFormat:@"%@", [[NSLocale preferredLanguages] componentsJoinedByString:@", "]], forHTTPHeaderField:@"Accept-Language"];
-~~~ -->
+~~~
 
 ~~~{swift}
 // Accept-Language HTTP Header; see http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.4
