--- a/2013-04-01-icloud.md
+++ b/2013-04-01-icloud.md
@@ -37,7 +37,7 @@ Everyone knows that key-value storage is the secret to achieving Web Scale. That
 
 Inject a healthy dose of Web Scale convenience into your app by incorporating `NSUbiquitousKeyValueStore` into your app:
 
-<!-- ~~~{objective-c}
+~~~{objective-c}
 - (BOOL)application:(UIApplication *)application
 didFinishLaunchingWithOptions:(NSDictionary *)launchOptions
 {
@@ -56,7 +56,7 @@ didFinishLaunchingWithOptions:(NSDictionary *)launchOptions
     NSUbiquitousKeyValueStore *ubiquitousKeyValueStore = notification.object;
     [ubiquitousKeyValueStore synchronize];
 }
-~~~ -->
+~~~
 
 ~~~{swift}
 func application(application: UIApplication!, didFinishLaunchingWithOptions launchOptions: NSDictionary!) -> Bool {
