--- a/2013-05-13-nscoding.md
+++ b/2013-05-13-nscoding.md
@@ -93,7 +93,7 @@ This article will look at the how's, when's, and why's of `NSKeyedArchiver` and 
 
 For example:
 
-<!-- ~~~{objective-c}
+~~~{objective-c}
 @interface Book : NSObject <NSCoding>
 @property NSString *title;
 @property NSString *author;
@@ -130,7 +130,7 @@ For example:
 }
 
 @end
-~~~ -->
+~~~
 
 ~~~{swift}
 class Book: NSObject, NSCoding {
@@ -182,9 +182,9 @@ An `NSCoding`-backed table view controller might, for instance, set its collecti
 
 #### Archiving
 
-<!-- ~~~{objective-c}
+~~~{objective-c}
 [NSKeyedArchiver archiveRootObject:books toFile:@"/path/to/archive"];
-~~~ -->
+~~~
 
 ~~~{swift}
 NSKeyedArchiver.archiveRootObject(books, toFile: "/path/to/archive")
@@ -192,9 +192,9 @@ NSKeyedArchiver.archiveRootObject(books, toFile: "/path/to/archive")
 
 #### Unarchiving
 
-<!-- ~~~{objective-c}
+~~~{objective-c}
 [NSKeyedUnarchiver unarchiveObjectWithFile:@"/path/to/archive"];
-~~~ -->
+~~~
 
 ~~~{swift}
 NSKeyedUnarchiver.unarchiveObjectWithFile("/path/to/archive")
@@ -208,10 +208,10 @@ While it is not advisable to store an entire object graph into `NSUserDefaults`,
 
 #### Archiving
 
-<!-- ~~~{objective-c}
+~~~{objective-c}
 NSData *data = [NSKeyedArchiver archivedDataWithRootObject:books];
 [[NSUserDefaults standardUserDefaults] setObject:data forKey:@"books"];
-~~~ -->
+~~~
 
 ~~~{swift}
 let data = NSKeyedArchiver.archivedDataWithRootObject(books)
@@ -220,10 +220,10 @@ NSUserDefaults.standardUserDefaults().setObject(data, forKey: "books")
 
 #### Unarchiving
 
-<!-- ~~~{objective-c}
+~~~{objective-c}
 NSData *data = [[NSUserDefaults standardUserDefaults] objectForKey:@"books"];
 NSArray *books = [NSKeyedUnarchiver unarchiveObjectWithData:data];
-~~~ -->
+~~~
 
 ~~~{swift}
 if let data = NSUserDefaults.standardUserDefaults().objectForKey("books") as? NSData {
