--- a/2014-08-24-wkwebkit.md
+++ b/2014-08-24-wkwebkit.md
@@ -200,7 +200,7 @@ For example, if someone were to build a browser specifically for NSHipster.com, 
 function getRelatedArticles() {
     var related = [];
     var elements = document.getElementById("related").getElementsByTagName("a");
-    for (i = 0; i < related.length; i++) {
+    for (i = 0; i < elements.length; i++) {
         var a = elements[i];
         related.push({href: a.href, title: a.title});
     }
