Mac OS X -> OS X

--- a/2013-03-04-backrow.md
+++ b/2013-03-04-backrow.md
@@ -17,9 +17,9 @@ That's right: this edition of NSHipster covers a topic so obscure, _it doesn't e
 
 ---
 
-Back Row is a private framework used in the Apple TV user experience. Its name is a reference to [Front Row][1], an application included in Mac OS X 10.4 – 10.6 that paired with the Apple Remote to transform the Mac into a couch-friendly media center.
+Back Row is a private framework used in the Apple TV user experience. Its name is a reference to [Front Row][1], an application included in OS X Tiger – 10.6 that paired with the Apple Remote to transform the Mac into a couch-friendly media center.
 
-The original Apple TV could be described as a "short Mac Mini", which ran a modified version of Front Row on a stripped-down build of Mac OS X. It was little more than an iTunes remote, streaming content from a shared iTunes library on a separate computer.
+The original Apple TV could be described as a "short Mac Mini", which ran a modified version of Front Row on a stripped-down build of OS X. It was little more than an iTunes remote, streaming content from a shared iTunes library on a separate computer.
 
 The second generation of the device took a smaller form factor, shifting its focus from media storage and management to on-demand streaming. The second generation Apple TV user interface reflected this in both its design and implementation. BackRow was ported from OS X to iOS, as it transcended its original role coordinating iTunes libraries to become an extensible platform for streaming media appliances.
 
