--- a/2013-05-13-nscoding.md
+++ b/2013-05-13-nscoding.md
@@ -7,7 +7,7 @@ excerpt: "Among the most important architectural decisions made when building an
 
 Among the most important architectural decisions made when building an app is how to persist data between launches. The question of how, exactly, to re-create the state of the app from the time it was last opened; of how to describe the object graph in such a way that it can be flawlessly reconstructed next time.
 
-On iOS and Mac OS X, Apple provides two options: [Core Data][1] or [`NSKeyedArchiver`][2] / [`NSKeyedUnarchiver`][3] (which serializes `<NSCoding>`-compliant classes to and from a data representation).
+On iOS and OS X, Apple provides two options: [Core Data][1] or [`NSKeyedArchiver`][2] / [`NSKeyedUnarchiver`][3] (which serializes `<NSCoding>`-compliant classes to and from a data representation).
 
 > Or rather: three, if you include `NSURLCache`. In the case of a client-server application, having the client load necessary data on each launch is a viable design, especially when combined with a disk-based cache, which allows stored server responses to be returned immediately from matching requests. In practice, some combination of network and object caching is advisable.
 
