--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -82,7 +82,7 @@ progress.cancellationHandler = ^{
 [progress cancel];
 ~~~
 
-`NSProgress` makes a lot more sense in the context of Mac OS X 10.9 Mavericks, but for now, it remains a useful class for encapsulating the shared patterns of work units.
+`NSProgress` makes a lot more sense in the context of OS X Mavericks, but for now, it remains a useful class for encapsulating the shared patterns of work units.
 
 ## NSArray -firstObject
 
