--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -8,7 +8,7 @@ excerpt: "NSError is the unsung hero of the Foundation framework. Passed gallant
 > To err is human.
 > To `NSError` is Cocoa.
 
-All programs on a Unix system are a child process of another process, forking all the way from the original process, the unmoved mover: `pid` 1 (which in the case of Mac OS X is `launchd`). When the executable finishes, it communicates a status code between `0` and `255` to its parent, as a way to communicate why or how the process exited. `0` means "everything exited normally; nothing to report here", while any non-zero value indicates something that the parent process should be aware of. Exit status codes may be used to indicate whether the process crashed, or terminated prematurely. By some conventions, the higher the return value, the more severe the cause of the error.
+All programs on a Unix system are a child process of another process, forking all the way from the original process, the unmoved mover: `pid` 1 (which in the case of OS X is `launchd`). When the executable finishes, it communicates a status code between `0` and `255` to its parent, as a way to communicate why or how the process exited. `0` means "everything exited normally; nothing to report here", while any non-zero value indicates something that the parent process should be aware of. Exit status codes may be used to indicate whether the process crashed, or terminated prematurely. By some conventions, the higher the return value, the more severe the cause of the error.
 
 In an OO paradigm processes are, for the most part, abstracted away, leaving only objects and the messages they pass between one another. That distinction between success and failure (and between different varieties of failure) is still useful in object-oriented programming. But considering that methods are often wont to return values other than `BOOL`, this can create something of a predicament.
 
