--- a/2013-11-04-xctool.md
+++ b/2013-11-04-xctool.md
@@ -11,7 +11,7 @@ Objective-C has changed so very much in such a very short timespan. In just a fe
 
 [CocoaPods](http://cocoapods.org), in particular, exemplifies the compounding influences of technology and community. Now two years into the project, there are over 2,700 community-submitted libraries and frameworks that can be integrated into your own project with a simple `pod install` command.
 
-Dependency management is just one of the many aspects of iOS and Mac OS X development that have been dramatically improved by the community. Other examples include [provisioning and distribution automation](http://nomad-cli.com), [bug reporting](http://www.quickradar.com), and [documentation](http://cocoadocs.org).
+Dependency management is just one of the many aspects of iOS and OS X development that have been dramatically improved by the community. Other examples include [provisioning and distribution automation](http://nomad-cli.com), [bug reporting](http://www.quickradar.com), and [documentation](http://cocoadocs.org).
 
 But this week, our focus is on a tool that redefines the actual build process itself, to serve as the foundation for a new generation of tooling and integration: `xctool`.
 
