--- a/2013-12-30-new-years-2014.md
+++ b/2013-12-30-new-years-2014.md
@@ -254,4 +254,4 @@ Thus concludes this year's reader submissions. Thanks again to everyone for your
 
 And thanks to you, dear reader, for sticking with NSHipster for another 52 weeks. Between the [WWDC session](http://asciiwwdc.com/2013/sessions/228?q=NSHipster) and [the book](https://gumroad.com/l/nshipster), 2013 has been a bellwether year for NSHipster. Thank you for your support and enthusiasm for the site—it really does mean the world to me.
 
-We have a ton of great stuff planned for 2014, so keep your fixies primed and your artisanal espresso hot for another season of great iOS and Mac OS X knowledge.
+We have a ton of great stuff planned for 2014, so keep your fixies primed and your artisanal espresso hot for another season of great iOS and OS X knowledge.
