--- a/2014-01-06-colophon.md
+++ b/2014-01-06-colophon.md
@@ -33,7 +33,7 @@ With dozens of articles under my belt at this point, I'm able to write comfortab
 
 ### Editing: Marked.app
 
-Once I've gotten most of the first draft finished, I'll throw the markdown file into [Marked](http://markedapp.com) to get a sense of the final document as it will read on the site. With all of the formatting in place, I'm able to get a better idea of the actual length and flow of the document. The readability tools and Mac OS X's built-in grammar and spell check act as a first-pass for typos.
+Once I've gotten most of the first draft finished, I'll throw the markdown file into [Marked](http://markedapp.com) to get a sense of the final document as it will read on the site. With all of the formatting in place, I'm able to get a better idea of the actual length and flow of the document. The readability tools and OS X's built-in grammar and spell check act as a first-pass for typos.
 
 ### Gene
 [Jekyll](http://jekyllrb.com) is what brings all of the content together to generate the final HTML of the site. The [source code for the site](https://github.com/NSHipster/nshipster.com) has evolved gradually over time to incorporate things like [RSS](http://nshipster.com/feed.xml), syndication on [Twitter](https://twitter.com/nshipster), Facebook, and [Google+](https://plus.google.com/+MatttThompson), and full-text search, as well as other best practices.
@@ -89,7 +89,7 @@ Speaking of translation—over the last couple months, I've been working with tr
 
 ## Book
 
-Which brings us to the book. [NSHipster: Obscure Topics in Cocoa & Objective-C](https://gumroad.com/l/nshipster) is the culmination of all of my efforts so far with NSHipster. It combines articles from the site, along with new articles to create an essential resource for any aspiring iOS or Mac OS X developer.
+Which brings us to the book. [NSHipster: Obscure Topics in Cocoa & Objective-C](https://gumroad.com/l/nshipster) is the culmination of all of my efforts so far with NSHipster. It combines articles from the site, along with new articles to create an essential resource for any aspiring iOS or OS X developer.
 
 I'll admit: I had no idea what I was getting myself into when I started. Turns out, writing and publishing a book is quite a bit different from a website. Working in the insulated, digital world of technology allows us to momentarily forget about most of the sharp edges of the real world. The process of writing the book was nothing if not a reality check.
 
