--- a/2014-08-24-wkwebkit.md
+++ b/2014-08-24-wkwebkit.md
@@ -23,7 +23,7 @@ However, all of this has changed with the introduction of `WKWebView` and the re
 
 * * *
 
-`WKWebView` is the centerpiece of the modern WebKit API introduced in iOS 8 & Mac OS X Yosemite. It replaces `UIWebView` in UIKit and `WebView` in AppKit, offering a consistent API across the two platforms.
+`WKWebView` is the centerpiece of the modern WebKit API introduced in iOS 8 & OS X Yosemite. It replaces `UIWebView` in UIKit and `WebView` in AppKit, offering a consistent API across the two platforms.
 
 Boasting responsive 60fps scrolling, built-in gestures, streamlined communication between app and webpage, and the same JavaScript engine as Safari, `WKWebView` is one of the most significant announcements to come out of WWDC 2014.
 
