--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -136,7 +136,7 @@ The documentation and examples found in [`NSURL`'s documentation](https://develo
 
 ## NSURLComponents
 
-Quietly added in iOS 7 and Mac OS X 10.9 Mavericks was `NSURLComponents`, which can best be described by what it could have been named instead: `NSMutableURL`. Still lacking documentation, this class remains one of the more obscure recent additions to Foundation.
+Quietly added in iOS 7 and OS X Mavericks was `NSURLComponents`, which can best be described by what it could have been named instead: `NSMutableURL`. Still lacking documentation, this class remains one of the more obscure recent additions to Foundation.
 
 `NSURLComponents` instances are constructed much in the same way as `NSURL`, with a provided `NSString` and optional base URL to resolve against (`+componentsWithString:` & `+componentsWithURL:resolvingAgainstBaseURL:`). It can also be `alloc init`'d without any arguments to create an empty storage container, similar to [`NSDateComponents`](http://nshipster.com/nsdatecomponents/).
 
