Mac OS X -> OS X

--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -84,7 +84,7 @@ progress.cancellationHandler = ^{
 [progress cancel];
 ~~~
 
-`NSProgress`在Mac OS X 10.9 Mavericks的使用环境下，会更有意义，但就目前而言，它仍然仅仅是一个用于封装工作单位共享模式的有用的类。
+`NSProgress`在OS X Mavericks的使用环境下，会更有意义，但就目前而言，它仍然仅仅是一个用于封装工作单位共享模式的有用的类。
 
 ## NSArray -firstObject
 
