--- a/2013-05-13-nscoding.md
+++ b/2013-05-13-nscoding.md
@@ -9,7 +9,7 @@ translator: Yu Jin
 
 在构建应用程序时，一个重要的架构决策问题是在每次启动之间如何持久化数据。问题是如何精准的重现最后一次关闭应用前的状态；如何描述对象图以使下次完美地重新构建。
 
-在 iOS 和 Mac OS X 上， 苹果提供了两种选择 ：[Core Data][1] 或 [`NSKeyedArchiver`][2] / [`NSKeyedUnarchiver`][3] （用来将遵循 `<NSCoding>` 的类序列化）
+在 iOS 和 OS X 上， 苹果提供了两种选择 ：[Core Data][1] 或 [`NSKeyedArchiver`][2] / [`NSKeyedUnarchiver`][3] （用来将遵循 `<NSCoding>` 的类序列化）
 
 > 或者更确切地说：有三种选择，如果你算上`NSURLCache`的话. 在client-server应用场景下，在每次启动时加载必要的数据是一种可行的设计，尤其是结合磁盘缓存，存储服务器的响应，这样当发送对应请求的时候可以立即返回。在实践中，网络层和对象层上的缓存结合是可取的。
 
