Updating WebKit article

--- a/2014-08-24-wkwebkit.md
+++ b/2014-08-24-wkwebkit.md
@@ -7,7 +7,7 @@ excerpt: "iOS has a complicated relationship with the web. And it goes back to t
 
 iOS has a complicated relationship with the web. And it goes back to the very inception of the platform nearly a decade ago.
 
-It's difficult to appreciate just how differently the first iPhone could have turned out. The iconic touchscreen device we know and love today was just one option of the table. Early prototypes explored the use of a physical keyboard and a touch screen + stylus combo, with screen dimensions going up to 5" x 7". Even the iPod click wheel was a serious contender for a time.
+It's difficult to appreciate just how differently the first iPhone could have turned out. The iconic touchscreen device we know and love today was just one option on the table. Early prototypes explored the use of a physical keyboard and a touch screen + stylus combo, with screen dimensions going up to 5" x 7". Even the iPod click wheel was a serious contender for a time.
 
 But perhaps the most significant early decision to be made involved software, not hardware.
 
