Tagging articles in NSHipster book

--- a/2012-07-14-nscache.md
+++ b/2012-07-14-nscache.md
@@ -2,6 +2,7 @@
 layout: post
 title: NSCache
 category: Cocoa
+tags: nshipster
 excerpt: "Poor NSCache, always being overshadowed by NSMutableDictionary. It's as if no one knew how it provides all of that garbage collection behavior that developers take great pains to re-implement themselves."
 ---
 
