--- a/2013-04-08-bool.md
+++ b/2013-04-08-bool.md
@@ -2,6 +2,7 @@
 layout: post
 title: "BOOL / bool / Boolean / NSCFBoolean"
 category: Objective-C
+tags: nshipster, popular
 excerpt: "Once again, encoding our logical universe into the cold, calculating bytecode of computers forces us to deal with these questions one way or another. And as you'll see from our discussion of boolean types in Objective-C and its kin, truth is indeed stranger than fiction."
 ---
 
