--- a/2013-08-26-equality.md
+++ b/2013-08-26-equality.md
@@ -2,6 +2,7 @@
 layout: post
 title: Equality
 category: Objective-C
+tags: nshipster
 excerpt: "The concept of equality is a central point of debate and inquiry in philosophy and mathematics, with far-reaching implications for matters of ethics, justice, and public policy. It is the task of programmers to reconcile our logical and physical understanding of equality with the semantic domains we model."
 ---
 
