--- a/2012-09-03-nslocale.md
+++ b/2012-09-03-nslocale.md
@@ -2,6 +2,7 @@
 layout: post
 title: NSLocale
 category: Cocoa
+tags: nshipster
 excerpt: "Internationalization is like flossing: everyone knows they should do it, but probably don't."
 ---
 
