--- a/2012-10-01-pragma.md
+++ b/2012-10-01-pragma.md
@@ -2,6 +2,7 @@
 layout: post
 title: "#pragma"
 category: Objective-C
+tags: nshipster
 excerpt: "`#pragma` declarations are a mark of craftsmanship in Objective-C. Although originally purposed for compiling source code across many different compilers, the modern Xcode-savvy programmer uses #pragma declarations to very different ends."
 ---
 
