--- a/2013-01-07-nil.md
+++ b/2013-01-07-nil.md
@@ -2,6 +2,7 @@
 layout: post
 title: "nil / Nil / NULL / NSNull"
 category: Objective-C
+tags: nshipster, popular
 excerpt: "Understanding the concept of nothingness is as much a philosophical issue as it is a pragmatic one. We are inhabitants of a universe of somethings, yet reason in a logical universe of existential uncertainties. As a physical manifestation of a logical system, computers are faced with the intractable problem of how to represent nothing with something."
 ---
 
