--- a/2013-01-28-nsvalue.md
+++ b/2013-01-28-nsvalue.md
@@ -2,6 +2,7 @@
 layout: post
 title: NSValue
 category: Cocoa
+tags: nshipster
 excerpt: "Boxing is the process of encapsulating scalars and value types with an object container, and is primarily used to store those values in collection objects—namely arrays and dictionaries. In Foundation, the reigning featherweight champion of boxing is NSValue."
 ---
 
