--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -2,6 +2,7 @@
 layout: post
 title: NSError
 category: Cocoa
+tags: nshipster
 excerpt: "NSError is the unsung hero of the Foundation framework. Passed gallantly in and out of perilous method calls, it is the messenger by which we are able to contextualize our failures."
 ---
 
