--- a/2014-03-17-empathy.md
+++ b/2014-03-17-empathy.md
@@ -2,6 +2,7 @@
 layout: post
 title: Empathy
 category: ""
+tags: nshipster
 excerpt: "We naturally want to help one another, to explain ideas, to be generous and patient. However, on the Internet, human nature seems to drop a few packets."
 ---
 
