the original code can't run due to Xcode(6.1) and Swift compiler update.

--- a/2014-08-24-wkwebkit.md
+++ b/2014-08-24-wkwebkit.md
@@ -171,9 +171,9 @@ window.webkit.messageHandlers.{NAME}.postMessage()
 The name of the handler is configured in `addScriptMessageHandler()`, which registers a handler conforming to the `WKScriptMessageHandler` protocol:
 
 ```swift
-class NotificationScriptMessageHandler: WKScriptMessageHandler {
-    func userContentController(userContentController: WKUserContentController!, didReceiveScriptMessage message: WKScriptMessage!) {
-        println(message["body"])
+class NotificationScriptMessageHandler: NSObject, WKScriptMessageHandler {
+    func userContentController(userContentController: WKUserContentController, didReceiveScriptMessage message: WKScriptMessage!) {
+        println(message.body)
     }
 }
 
