--- a/nshipster.com/404.md
+++ b/nshipster.com/404.md
@@ -8,8 +8,21 @@ title: NSError 404 - NSHipster
 ```swift
 let domain = "nshipster.com"
 let code = 404
-let userInfo = [NSLocalizedDescriptionKey: "Requested page is too obscure, and probably does not exist.",
-    NSLocalizedRecoverySuggestionErrorKey: "Go back to the mainstream site."]
+let userInfo = [
+    NSLocalizedDescriptionKey: "Requested page is too obscure, and probably does not exist.",
+    NSLocalizedRecoverySuggestionErrorKey: "Go back to the mainstream site."
+]
 
 let error = NSError(domain: domain, code: code, userInfo: userInfo)
+```
+
+```objective-c
+NSString *domain = @"nshipster.com";
+NSInteger code = 404;
+NSDictionary *userInfo = @{
+    NSLocalizedDescriptionKey: @"Requested page is too obscure, and probably does not exist.",
+    NSLocalizedRecoverySuggestionErrorKey: @"Go back to the mainstream site."
+};
+
+NSError *error = [[NSError alloc] initWithDomain:domain code:code userInfo:userInfo];
 ```
