Futzing around with New Year's roundups

--- a/2013-01-01-new-years-2013.md
+++ b/2013-01-01-new-years-2013.md
@@ -1,9 +1,11 @@
 ---
 layout: post
-title: "Reader Submissions -<br/>New Year's 2013"
+title: "Reader Submissions -<br/> New Year's 2013"
 author: Mattt Thompson
 category: Reader Submissions
 excerpt: "In celebration of the forthcoming `year++`, I thought it'd be fun to compile a list of some of your favorite tips and tricks of the trade. Readers were asked to submit their favorite piece of Objective-C trivia, framework arcana, hidden Xcode feature, or anything else they thought is cool."
+redirect_from:
+  - /reader-submissions-new-years-2013
 ---
 
 In celebration of the forthcoming `year++`, I thought it'd be fun to compile a list of some of _your_ favorite tips and tricks of the trade--to give y'all a chance to show off some of your NSHipster cred.
@@ -164,5 +166,3 @@ This code sample has only been tested on iOS, and should only be used for debugg
 Thanks again to everyone for their submissions this time around. We'll definitely be doing this again, so feel free to send your favorite piece of Objective-C trivia, framework arcana, hidden Xcode feature, or anything else you think is cool to [@NSHipster](https://twitter.com/nshipster)!
 
 And thank you, dear reader, for your support of NSHipster over these last wonderful months. We have a lot of insanely great things planned for NSHipster in 2013, and we look forward to being able to share it all with all of you.
-
-
