Adding author to posts.

--- a/2014-08-24-wkwebkit.md
+++ b/2014-08-24-wkwebkit.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: WKWebView
+author: Mattt Thompson
 category: ""
 translator: Croath Liu
 excerpt: "iOS 与 web 之间的关系非常复杂，这种复杂关系甚至可以追溯到几十年前系统建立初期。"
