Add missing translate line

--- a/2015-01-01-new-years-2015.md
+++ b/2015-01-01-new-years-2015.md
@@ -199,6 +199,8 @@ The rest of this year's reader submissions come from [Cédric Luthi](https://git
 
 ## CocoaPods, Exposed!
 
+## 揭露 CocoaPods!
+
 > Here's a quick way to check all the pods used by a (closed source) app:
 
 > 有一个快速方法来检查（闭源）应用程序使用的所有源：
