prepare for publish

--- a/2015-01-01-new-years-2015.md
+++ b/2015-01-01-new-years-2015.md
@@ -2,16 +2,11 @@
 title: "Reader Submissions -<br/> New Year's 2015"
 author: Mattt Thompson
 category: Reader Submissions
-excerpt: "2014 was an incredible year professionally for Apple developers. With a deluge of new developments—both from Cupertino and the community at large—there were no shortage of interesting tidbits for readers to share."
 translator: April Peng
 excerpt: "对专业的苹果开发者来说，2014 年是一个令人难以置信的一年。随着大量新发展的出现，无论是从苹果还是整个社区，都为读者分享了很多的有趣花絮。"
 ---
 
-As we take a moment to reflect on our experiences over the past year, one thing is clear: 2014 was an incredible year professionally for Apple developers. So much has happened in such a short timespan, and yet it's hard to remember our relationship to Objective-C before Swift, or what APIs could have captivated our imagination as much as iOS 8 or WatchKit.
-
 当我们花些时间来回溯我们在过去一年的经历的时候，有一点是清楚的：对专业的苹果开发者来说，2014 年是一个令人难以置信的一年。在这么短的时间跨度内发生了这么多的事情，都记不得在 Swift 之前我们跟 Objective-C 的关系，或者还有什么 API 比 iOS 8 或 WatchKit 更让我们着迷。
-
-It's an NSHipster tradition to ask you, dear readers, to [send in your favorite tips and tricks from the past year](https://gist.github.com/mattt/f00da093956f20945727) for publication over the New Year's holiday. This year, with a deluge of new developments—both from Cupertino and the community at large—there were no shortage of interesting tidbits to share.
 
 这有一个 NSHipster 传统问题要问你们，亲爱的读者，[请把你在过去一年里最喜欢的技巧发送给我们](https://gist.github.com/mattt/f00da093956f20945727)，我们会在新年假期后公布结果。这一年随着大量新发展的出现，无论从苹果还是整个社区，都为读者分享了很多的有趣花絮。
 
@@ -19,19 +14,13 @@ It's an NSHipster tradition to ask you, dear readers, to [send in your favorite 
 
 * * *
 
-## The Secret Lives of Member Functions
-
 ## 成员函数的秘密生活
 
 来自 [Robert Widmann](https://github.com/CodaFi):
 
-> Member functions on Swift classes and structures always have the following type when used statically:
-
 > 在 Swift 的类和结构里，使用静态时成员函数类总是有下列类型：
 
     Object -> (Args) -> Thing
-
-For example, you can call `reverse()` on an array in two ways:
 
 比如，你可以用两种方式来对一个数组调用 `reverse()`：
 
@@ -40,13 +29,9 @@ For example, you can call `reverse()` on an array in two ways:
 Array.reverse([1, 2, 3, 4])()
 ```
 
-## `@( )` for Boxing C-Strings
-
 ## `@( )` 来封装 C-Strings
 
 来自 [Samuel Defago](https://github.com/defagos):
-
-> Given the fact that literals are most of the time associated with numbers and collections, I often forget that they work for UTF8-encoded `NULL`-terminated C-strings as well, especially when I write code using the runtime:
 
 > 鉴于文字大部分是用数字和集合关联的，我常常忘记它们可以在 UTF8 下工作良好，并且编码了 `NULL`， 终结了 C-string，特别是当我使用运行时代码：
 
@@ -57,8 +42,6 @@ NSString *propertyAttributesString =
 ```
 
 ## AmIBeingDebugged
-
-[Nolan O'Brien](https://github.com/NSProgrammer) brings the `AmIBeingDebugged` function to our attention from from [this Technical Q&A document](https://developer.apple.com/library/mac/qa/qa1361/_index.html):
 
 [Nolan O'Brien](https://github.com/NSProgrammer) 的 [this Technical Q&A document](https://developer.apple.com/library/mac/qa/qa1361/_index.html) 让我们对 `AmIBeingDebugged` 方法引起了关注：
 
@@ -87,13 +70,9 @@ static Bool AmIBeingDebugged(void) {
 }
 ```
 
-## Use Lazy Variables
-
 ## 使用惰性变量（Lazy Variables）
 
 来自 [Colin Rofls](https://github.com/cmyr):
-
-> Optionals should be avoided. Implicitly unwrapped optionals should be strongly avoided. Want to declare a var but don't necessarily have an initial value at init time? Use the lazy keyword, and just don't call the getter before you have your real value.
 
 > 避免使用 optional。应尽量避免对 optional 进行隐式拆包（implicitly unwraped）。要声明一个变量，但不一定在初始化时赋初始值？就用惰性关键字，在你真的有值之前不调用 getter 方法。
 
@@ -101,17 +80,12 @@ static Bool AmIBeingDebugged(void) {
 lazy var someModelStructure = ExpensiveClass()
 ```
 
-> If you call `set` on this var without having ever called the getter, the lazy expression is never evaluated. Great for references to views that you don't necessarily want to init until viewDidLoad, for instance.
-
 > 如果你对这个变量调用 `set` 之前没有调用过 getter，惰性表达式永远不会被执行。比如在视图里直到 viewDidLoad 之前你都不一定要初始化就很棒。
 
-## Accessing Child Controllers Inserted Into Storyboard Container Views
 
 ## 访问添加到 Storyboard 的容器视图（container views）里的子控制器（child controllers）
 
 来自 [Vadim Shpakovski](https://github.com/shpakovski):
-
-> Here is a convenient way to access child controllers inserted into Storyboard container views:
 
 > 有一种方便的方式来访问插入到 storyboard 容器视图的子控制器：
 
@@ -142,27 +116,18 @@ lazy var someModelStructure = ExpensiveClass()
 }
 ```
 
-## Re-Run without Re-Building
-
 ##  不需要重新编译的重新运行
 
 来自 [Heath Borders](https://github.com/hborders):
 
-> If you're repeatedly debugging the same problem over and over, you can run your app without rebuilding with "Product > Perform Action > Run without Building" (`⌘⌃R`).
-
 > 如果你一遍又一遍的调试同样的问题，你可以不重新编译就运行你的应用程序: "Product > Perform Action > Run without Building" (`⌘⌃R`)。
 
-## Quick Access to Playground Resources
 
 ##  快速访问 Playground 资源
 
 来自 [Jon Friskics](https://github.com/jonfriskics):
 
-> Swift Playgrounds all share the same Shared Playground Data folder that's symlinked to `/Users/HOME/Documents/Shared Playground Data`.
-
 > Swift Playgrounds 跟所有的共享 Playground 数据都在 `/Users/HOME/Documents/Shared Playground Data` 下可以找到。
-
-> If you like using lots of Playgrounds, you'll want to organize the data that each Playground is using into subfolders of that shared folder, but then you've got to let the Playground know where to look. Here's a helper function that I use that makes that easy:
 
 > 如果你喜欢使用很多的 Playgrounds，你会想要把各 Playground 使用到的数据放到该共享文件夹的子文件夹里面，但你得让 Playground 知道去哪里找。下面是我使用的辅助方法来让这事变得简单：
 
@@ -172,8 +137,6 @@ func pathToFileInSharedSubfolder(file: String) -> String {
 }
 ```
 
-> That processName property in NSProcessInfo contains the name of the Playground file, so as long as you have already created a sub-folder in the Shared Playground Data folder with the same name you can access those files pretty easily, like reading local JSON:
-
 > 在 NSProcessInfo 的 processName 属性包含了 Playground 文件的名称，所以只要你已经在 Playground 的共享数据文件夹里创建了用相同名字命名的子文件夹，就可以很容易的访问这些文件，就像读本地的 JSON 一样：
 
 ```swift
@@ -181,8 +144,6 @@ var jsonReadError:NSError?
 let jsonData = NSFileManager.defaultManager().contentsAtPath(pathToFileInSharedSubfolder("data.json"))!
 let jsonArray = NSJSONSerialization.JSONObjectWithData(jsonData, options: nil, error: &jsonReadError) as [AnyObject]
 ```
-
->...or pulling out a local image:
 
 > ...或者得到一个本地图片：
 
@@ -193,106 +154,65 @@ imageView.image = UIImage(contentsOfFile: pathToFileInSharedSubfolder("image.png
 
 * * *
 
-The rest of this year's reader submissions come from [Cédric Luthi](https://github.com/0xced), who (as in [years](http://nshipster.com/new-years-2014/) [past](http://nshipster.com/reader-submissions-new-years-2013/)) contributed a payload of tips and tricks worthy of an entire article unto themselves. Thanks so much for these, Cédric!
-
 今年其余的读者意见的来自 [Cédric Luthi](https://github.com/0xced)，他（像[去年](http://nshipster.com/new-years-2014/)或[之前](http://nshipster.com/reader-submissions-new-years-2013/)一样）贡献了很多的技巧和窍门值得占据一整篇文章。非常感谢，Cédric！
 
-## CocoaPods, Exposed!
 
 ## 揭露 CocoaPods!
-
-> Here's a quick way to check all the pods used by a (closed source) app:
 
 > 有一个快速方法来检查（闭源）应用程序使用的所有源：
 
 `$ class-dump -C Pods_ /Applications/Squire.app | grep -o "Pods_\w+"`
 
+
 ## `CREATE_INFOPLIST_SECTION_IN_BINARY`
 
-> Check out the `CREATE_INFOPLIST_SECTION_IN_BINARY` Xcode setting for command-line apps. It's much easier to use than the `-sectcreate __TEXT __info_plist` linker flag and it embeds the processed Info.plist file into the binary.
-
 > 查看 Xcode 中对命令行应用程序的设置 `CREATE_INFOPLIST_SECTION_IN_BINARY`。它比 `-sectcreate__TEXT__info_plist` 链接标志（linker flag）更容易使用，而且它把处理了的 Info.plist 文件嵌入了到二进制包中。
-
-> It's also a lesson on filing radars. This feature request was filed as `rdar://4722772` in 2006 and was addressed about 7 years later.
 
 > 这也是在归档雷达的教训。在2006年，此功能被要求以 `rdar://4722772` 归档，在 7 年后才被认真对待。
 
 
-## Stop dylib Hooking
-
 ## 阻止 dylib 钩子
 
-> Make hackers' lives tougher with [this trick from Sam Marshall](https://twitter.com/dirk_gently/status/481075149437804544):> > 
-
 > [来自 Sam Marshall 的这一招](https://twitter.com/dirk_gently/status/481075149437804544)使黑客的生活更艰难:> >
-
->> Add this one line to your "Other Linker Flags":
 
 >> 把这一行加到你的 "Other Linker Flags" 里:
 
 `-Wl,-sectcreate,__RESTRICT,__restrict,/dev/null`
 
+
 ## NSBundle -preferredLocalizations
 
-> Sometimes, you need to know which language your app is running in. Often, people will use `NSLocale +preferredLanguages`. Unfortunately this tells nothing about the language the app is actually displaying. It will just give you the ordered list as found in "Settings → General → Language & Region → Preferred Language" Order on iOS, or "System Preferences → Language & Region → Preferred Languages" on OS X.
-> 
 > 有时候，你需要知道你的应用程序在什么语言环境下运行。通常，人们会用 `NSLocale +preferredLanguages`。不幸的是这除了告诉你应用程序实际上显示的语言之外一无所知。它只是给你 iOS 中 "Settings → General → Language & Region → Preferred Language" 或是 OS X 里 "System Preferences → Language & Region → Preferred Languages" 同样的有序列表。
->
-> Imagine that the preferred language order is `{English, French}` but your app is German only. Calling `[[NSLocale preferredLanguages] firstObject]` will give you English when you want German.
 
 > 想象一下如果首选语言顺序是 `{英语, 法语}` 但是你的应用程序只支持德语。调用 `[NSLocale preferredLanguages] firstObject]` 会返回英语而不是你想要的德语。
->
-> The proper way to get the actual language used by the app is to use `[[NSBundle mainBundle] preferredLocalizations]`.
 
 > 得到应用程序使用的准确语言环境的正确方式是使用 `[[NSBundle mainBundle] preferredLocalizations]`。
 
-From the documentation:
-
 文档是这么说的：
-
->> An array of `NSString` objects containing language IDs for localizations in the bundle. The strings are ordered according to the user's language preferences and available localizations.
 
 >> 一个 `NSString` 对象的数组包含了 bundle 里的区域语言 ID。这些字符串是按用户系统设置和可用本地化来排序的。
 
-From a comment in `NSBundle.h`:
-
 `NSBundle.h` 里的注释说：
 
->> A subset of this bundle's localizations, re-ordered into the preferred order for this process's current execution environment; the main bundle's preferred localizations indicate the language (of text) the user is most likely seeing in the UI
-
 >> 这个 bundle 本地化的子集，会对这个进程的当前执行环境的优先顺序上重新排序；主 bundle 的首选本地化显示了用户是最有可能在 UI 看到的语言（文本）
-
-> You may also need to use `NSLocale +canonicalLanguageIdentifierFromString:` in order to ensure a canonical language identifier.
 
 > 你大概还需要使用 `NSLocale +canonicalLanguageIdentifierFromString:` 来确保规范的语言标识。
  
 
-## Preserve SDK Headers
-
 ## 保护 SDK 头文件
-
-> If you are installing Xcode from the dmg, check out [this technique by Joar Wingfors](https://twitter.com/joar_at_work/statuses/472986684196278272) in order to avoid to accidentally modifying SDK headers by preserving ownership, permissions and hard links:
 
 > 如果你是从 dmg 里安装的 Xcode，参考一下[这个来自 Joar Wingfors 的方法](https://twitter.com/joar_at_work/statuses/472986684196278272)，通过保留所有权、权限和硬链接的方式避免不小心修改了 SDK 的头文件：
 
 `$ sudo ditto /Volumes/Xcode/Xcode.app /Applications/Xcode.app`
 
-## Inspecting `void *` Instance Variables
 
 ## 检查 `void *` 的实例变量
 
-> For reverse engineering purpose, it's often useful to look at instance variables of objects. It's usually pretty easy to do so with `valueForKey:`, since very few classes override `+accessInstanceVariablesDirectly` to disable ivar access through Key-Value Coding.
-
 > 因为逆向工程的原因，非常有用的常用方法是查看对象的实例变量。它通常很容易通过 `valueForKey:` 来达成，因为很少有类会重写 `+accessInstanceVariablesDirectly` 来禁止变量通过 Key-Value Coding 访问。
-
-> There's one case where it doesn't work though: when the ivar has a `void *` type.
 
 > 但是有一种情况会让这个不起作用：当变量有一个 `void *` 类型的时候。
 
-> Here is an excerpt of the MediaPlayer framework class-dump on iOS 6.1:
-
 > 这有一个来自 iOS 6.1 里 MediaPlayer 库的摘录：
-
 
 ```objective-c
 @interface MPMoviePlayerController : NSObject <MPMediaPlayback>
@@ -302,27 +222,18 @@ From a comment in `NSBundle.h`:
 }
 ```
 
-> Since `id internal = [moviePlayerController valueForKey:@"internal"]` doesn't work, here is the hardcore way to access the internal ivar:
-
 > 由于 `id internal = [moviePlayerController valueForKey:@"internal"]` 不工作，有一个硬编码的方式访问内部变量：
-
 
 ```objective-c
 id internal = *((const id*)(void*)((uintptr_t)moviePlayerController + sizeof(Class)));
 ```
-
-> Don't ship this code, its's very fragile because the ivar layout may change. Use this for reverse engineering only!
 
 > 不要发布这样的代码，这是非常不可靠的，因为变量布局可能会改变。只在逆向工程里使用！
 
 
 ## `NSDateFormatter +dateFormatFromTemplate:options:locale:`
 
-> A friendly reminder that if you are using `NSDateFormatter -setDateFormat:` without `NSDateFormatter +dateFormatFromTemplate:options:locale:`, you're probably doing it wrong.
-
 > 友情提示：如果你在使用 `NSDateFormatter -setDateFormat:` 而不同时使用 `NSDateFormatter +dateFormatFromTemplate:options:locale:` 那么你很可能做错了。
->
-> From the [documentation](https://developer.apple.com/library/mac/documentation/Cocoa/Reference/Foundation/Classes/NSDateFormatter_Class/#//apple_ref/occ/clm/NSDateFormatter/dateFormatFromTemplate:options:locale):
 
 > [文档](https://developer.apple.com/library/mac/documentation/Cocoa/Reference/Foundation/Classes/NSDateFormatter_Class/#//apple_ref/occ/clm/NSDateFormatter/dateFormatFromTemplate:options:locale)是这样的：
 
@@ -332,11 +243,7 @@ id internal = *((const id*)(void*)((uintptr_t)moviePlayerController + sizeof(Cla
                               locale:(NSLocale *)locale
 ```
 
->> Different locales have different conventions for the ordering of date components. You use this method to get an appropriate format string for a given set of components for a specified locale (typically you use the current locale—see currentLocale).
-
 >> 不同的语言对时间要素有不同的规范。你用这个方法来得到某个特定语言（通常使用当前的语言 - 参看 currentLocale）给定的时间要素的正确字符串格式。
-
->> The following example shows the difference between the date formats for British and American English:
 
 >> 下面的例子展示了时间在英国英语和美国英语下的不同格式：
 
@@ -360,18 +267,12 @@ NSLog(@"Date format for %@: %@",
 // Date format for English (United Kingdom): d MMMM y
 ```
 
-## Deriving Internal Constants with the Debugger
-
 ## 调试器中得到内部常量
-
-> Recently, [Matthias Tretter](https://twitter.com/myell0w/) asked on Twitter:
 
 > 最近，[Matthias Tretter](https://twitter.com/myell0w/) 在 Twitter 上提问：
 
 <blockquote class="twitter-tweet" lang="en"><p>有没有人知道在 iOS 8 里面默认的动画时长和使 viewController 用模型方式展示的触发条件？</p>&mdash; Matthias Tretter (@myell0w) <a href="https://twitter.com/myell0w/status/535775373729234944">November 21, 2014</a></blockquote>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-> Search for duration in a class-dump of UIKit, find the `UITransitionView +defaultDurationForTransition:` method, and set a breakpoint for that method:
 
 > 在 UIKit 的类堆栈里搜索 duration，找到了 `UITransitionView +defaultDurationForTransition:` 方法，然后在那个方法上加个断点：
 
@@ -379,15 +280,11 @@ NSLog(@"Date format for %@: %@",
 (lldb) br set -n "+[UITransitionView defaultDurationForTransition:]"
 ```
 
-> Present a modal view controller, you will hit the breakpoint, type `finish` to execute the method:
-
 > 展示一个模式视图控制器，就会进到这个断点，键入 `finish` 来执行这个方法：
 
 ```
 (lldb) finish
 ```
-
-> At that point `defaultDurationForTransition:` has executed, and you can read the result (it's in the `xmm0` register):
 
 > 在 `defaultDurationForTransition:` 执行的那个断点，你可以读到结果（在 `xmm0` 里）：
 
@@ -396,26 +293,17 @@ NSLog(@"Date format for %@: %@",
     xmm0 = {0.4 0}
 ```
 
-> Answer: the default duration is 0.4s.
-
 > 答案：默认时长是 0.4 秒。
 
 
-## DIY Weak Associated Objects
-
 ## DIY 弱关联对象
-
-> Unfortunately, the associated objects `OBJC_ASSOCIATION_ASSIGN` policy does not support zeroing weak references. Fortunately, it's quite easy to implement yourself. You just need a simple class to wrap an object with a weak reference:
 
 > 遗憾的是，关联对象 `OBJC_ASSOCIATION_ASSIGN` 的政策不支持零弱引用（zeroing weak references）。幸运的是，自己实现也很简单。你只需一个简单的类来封装一个弱引用的对象：
 
 
-## DIY Weak Associated Objects
-
-> Unfortunately, the associated objects `OBJC_ASSOCIATION_ASSIGN` policy does not support zeroing weak references. Fortunately, it's quite easy to implement yourself. You just need a simple class to wrap an object with a weak reference:
+## DIY 若关联对象
 
 > 遗憾的是，关联对象 `OBJC_ASSOCIATION_ASSIGN` 政策不支持零弱引用（zeroing weak references）。幸运的是，自己实现也很简单。你只需一个类来封装一个弱引用的对象：
-
 
 ```objective-c
 @interface WeakObjectContainter : NSObject
@@ -436,16 +324,11 @@ NSLog(@"Date format for %@: %@",
 @end
 ```
 
-> Then, associate the `WeakObjectContainter` with `OBJC_ASSOCIATION_RETAIN(_NONATOMIC):`
-
 > 然后，用 `OBJC_ASSOCIATION_RETAIN(_NONATOMIC):` 关联 `WeakObjectContainter`
-
 
 ```objective-c
 objc_setAssociatedObject(self, &MyKey, [[WeakObjectContainter alloc] initWithObject:object], OBJC_ASSOCIATION_RETAIN_NONATOMIC);
 ```
-
-> Use the `object` property to access it in order to get a zeroing weak reference to the desired object:
 
 > 用 `object` 属性来访问它以使得把零弱引用关联到需要的对象上：
 
@@ -455,10 +338,6 @@ id object = [objc_getAssociatedObject(self, &MyKey) object];
 
 * * *
 
-And with that, we bring in a brand new year of possibilities and opportunities. Happy 2015, everyone!
-
 就是这样，我们迎来了全新的充满可能和机会的一年。大家 2015 年快乐！
-
-May your code continue to compile and inspire.
 
 祝愿你继续编译你的代码并且得到鼓舞。
